# libdill

./: Makefile.am  chan.c
tests/quickcheck/: libdill-quickcheck.cabal  stack.yaml
tests/quickcheck/test/: ChannelQC.hs  QuickCheck.hs
tests/quickcheck/test/FFI/: Channels.hs  Handles.hs  Helpers.hs  TestCaseFFI.hs
tests/quickcheck/test/FFI/lib/: test-ffi.c  test-ffi.h
