name:                libdill-quickcheck
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

test-suite libdill-quickcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             QuickCheck.hs
  other-modules:       FFI.Channels
                     , FFI.TestCaseFFI
  build-depends:       base
                     , containers
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , array
  includes:            libdill.h
                     , test-ffi.h
  extra-libraries:     dill
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  default-language:    Haskell2010
